chore: autoformat aws example

--- a/examples/aws-static-website/www/index.html
+++ b/examples/aws-static-website/www/index.html
@@ -1,8 +1,15 @@
 <html>
-    <head><meta charset="UTF-8">
-    <title>Hello, Pulumi!</title></head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Hello, Pulumi!</title>
     <link href="favicon.png" rel="icon" type="image/png" />
+</head>
+
 <body>
-    <p>Hello, S3!</p>
+    <h1>Hello, S3!</h1>
     <p>Made with ❤️ with <a href="https://pulumi.com">Pulumi</a></p>
-</body></html>
+    <p>This file is served from Amazon S3.</p>
+</body>
+
+</html>
